# ScratchConverter

./: .gitignore  CMakeLists.txt  README.md
runtime/: CMakeLists.txt.in  ScratchRuntime.hpp
src/: main.cpp
src/app/: App.cpp  App.hpp
src/core/: CodeGenerator.cpp  CodeGenerator.hpp  Compiler.cpp  Compiler.hpp  ConversionConfig.hpp  ConversionPipeline.cpp  ConversionPipeline.hpp  ProjectModel.hpp  SB3Parser.cpp  SB3Parser.hpp  SvgConverter.cpp  SvgConverter.hpp
src/ui/: MainFrame.cpp  MainFrame.hpp
